Archive2/0b/952df9a4f776b0/output
main.cpp: In function 'int main()':
main.cpp:7:17: error: switch quantity not an integer
     switch (word) {
                 ^
main.cpp:8:14: error: could not convert '"hello"' from 'const char [6]' to '<type error>'
         case "hello": std::cout << "hello";
              ^
main.cpp:6:9: warning: unused variable 'i' [-Wunused-variable]
     int i = 2;
         ^
